--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "socketstream",
+  "name": "msocketstream",
   "description": "A framework for Realtime Web Apps",
   "version": "0.3.11",
   "homepage": "http://www.socketstream.org",
   "author": "Owen Barnes <owen@socketstream.org>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/socketstream/socketstream"
+    "url": "https://github.com/MartinKT/socketstream"
   },
   "contributors": [
     "Paul Jensen",
